--- a/style.css
+++ b/style.css
@@ -30,6 +30,20 @@
  
     
 }
+.video{
+  
+  height: 70vh;
+
+  margin: auto;
+  background-color:lightslategrey
+}
+.aboutus{
+  line-height: 30px;
+  margin-top: 20px;
+  color:rgb(0, 140, 255);
+  text-align: center;
+  font-size: large;
+}
 
 .header{
     height: 8vh;
@@ -40,7 +54,7 @@
   background-size: cover;
   text-align: center;
 
-  height: 90vh;
+  height: 100vh;
 }
 .hero{
   position: relative;
@@ -102,12 +116,33 @@
   color: rgb(207, 131, 131);
 }
 .about{
-  margin-top:20px;
+  height: 150vh;
+  background-color: lightgray;
+  padding:20px;
+  padding-top: 40px;
 }
 .about-heading{
+  font-weight: 800;
   font-size: larger;
   text-align: center;
   
+}
+.img{
+  height: 50%;
+  background-color: violet;
+}
+.cards{
+  padding-top: 60px;
+  background-image: linear-gradient(180deg, lightgray 50%, rgb(121, 48, 48) 50%);
+
+  display: flex;
+  justify-content: space-around;
+}
+.card{
+  height: 50vh;
+  width: 30%;
+  background-color: white;
+
 }
 .hamburger{
   position: relative;
