--- a/style.css
+++ b/style.css
@@ -1,221 +1,304 @@
-.navbar{
-  position: absolute;
-  width: 100%;
+html {
+    scroll-behavior: smooth;
+}
+
+.navbar {
+    position: absolute;
+    width: 100%;
     background-color: rgb(44, 43, 43);
     height: 8vh;
     padding-top: 20px;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
-*{
-   margin: 0px; 
-   font-family: 'Open Sans', sans-serif;
-}
-.list{
-    
-  text-align: center;
 
-
+* {
+    margin: 0px;
+    font-family: 'Open Sans', sans-serif;
 }
-.list li{
+
+.list {
+    text-align: center;
+}
+
+.list li {
     position: relative;
     margin-left: 20px;
     list-style: none;
     color: white;
     font-size: medium;
-  display: inline;
-  color: white;
-  padding: 14px 16px;
-  text-decoration: none;
- 
-    
-}
-.video{
-  
-  height: 70vh;
-
-  margin: auto;
-  background-color:lightslategrey
-}
-.aboutus{
-  line-height: 30px;
-  margin-top: 20px;
-  color:rgb(0, 140, 255);
-  text-align: center;
-  font-size: large;
+    display: inline;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
-.header{
+.video {
+    height: 70vh;
+    margin: auto;
+    background-color: lightslategrey;
+    margin-top: 50px;
+}
+
+.aboutus {
+    line-height: 30px;
+    margin-top: 20px;
+    color: rgb(177, 177, 177);
+    text-align: center;
+    font-size: large;
+    letter-spacing: 2px;
+}
+
+.header {
     height: 8vh;
     background-color: rgb(26, 25, 25);
 }
-.bod{  
-  background-image:  linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url(./asset/woman-driving.jpg);
-  background-size: cover;
-  text-align: center;
 
-  height: 100vh;
-}
-.hero{
-  position: relative;
-  top:30vh;
-  
-  font-size: large;
-  color: white;
-  text-align: center;
-}
-.logo{
-  margin:20px
-}
-.name{
-  font-size: 2rem;
-}
-.subheading{
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.sline{
-  margin: 10px;
-  width: 40px;
-  height: 2px;
-  background-color: rgba(0, 207, 243, 0.473);
-}
-.button{
-  background-color: rgb(97, 91, 92);
-  height: 50px;
-  width: 25vw;
-  margin: auto;
-  margin-top: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-  border-radius: 90px;
-  
-
+.bod {
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('./asset/woman-driving.jpg');
+    background-size: cover;
+    text-align: center;
+    height: 100vh;
 }
 
-.navbar.active{
-  height: fit-content;
+.hero {
+    position: relative;
+    top: 30vh;
+    font-size: large;
+    color: white;
+    text-align: center;
+}
 
+.logo {
+    margin: 20px
 }
-.appointment{
-  margin: 40px;
-  margin-top: 50px;
-}
-.button:hover{
-  background-color: white;
-  color: black;
-}
-.title{
-  font-size: xx-large;
-  font-style: italic;
-  font-weight: 700;
-  color: rgb(207, 131, 131);
-}
-.about{
-  height: 150vh;
-  background-color: lightgray;
-  padding:20px;
-  padding-top: 40px;
-}
-.about-heading{
-  font-weight: 800;
-  font-size: larger;
-  text-align: center;
-  
-}
-.img{
-  height: 50%;
-  background-color: violet;
-}
-.cards{
-  padding-top: 60px;
-  background-image: linear-gradient(180deg, lightgray 50%, rgb(121, 48, 48) 50%);
 
-  display: flex;
-  justify-content: space-around;
+.name {
+    font-size: 2rem;
 }
-.card{
-  height: 50vh;
-  width: 30%;
-  background-color: white;
 
+.subheading {
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
-.hamburger{
-  position: relative;
-  bottom:auto;
-  display: none;
+
+.sline {
+    margin: 10px;
+    width: 40px;
+    height: 2px;
+    background-color: rgba(0, 207, 243, 0.473);
 }
-.bar{
-  display: block;
-  width: 25px;
-  height: 3px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  margin: 5px auto;
-  
-  background-color: whitesmoke;
+
+.button {
+    background-color: rgb(97, 91, 92);
+    height: 50px;
+    width: 25vw;
+    margin: auto;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border-radius: 90px;
 }
-@media screen and (max-width: 800px) {
-  .button{
-    width: 80%;
-  }
-  
+
+.navbar.active {
+    height: fit-content;
 }
-@media screen and (max-width: 1000px){
-  
-  .list li{
+
+.appointment {
+    margin: 40px;
+    margin-top: 50px;
+}
+
+.button:hover {
+    background-color: white;
+    color: black;
+}
+
+.title {
+    font-size: xx-large;
+    font-style: italic;
+    font-weight: 700;
+    color: rgb(207, 131, 131);
+}
+
+.features {
+    letter-spacing: 2px;
+    margin: 10px;
+    margin-top: 20px;
+}
+
+.pricingcard {
+    height: 70vh;
+    width: 30%;
+    border-radius: 20px;
+    background: rgb(247, 247, 247);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    justify-content: space-around;
+}
+
+.pricingcards {
+    display: flex;
+    justify-content: space-around;
+}
+
+.price {
+    font-size: 2rem;
+    margin: 8px;
+}
+
+.pricingprice {
+    margin-top: 20px;
+    display: flex;
+    align-items: baseline;
+}
+
+.pricingheading {
+    text-align: center;
+    letter-spacing: 2px;
+    font-weight: normal;
+    font-size: 30px;
+}
+
+.pricingpage {
+    background: wheat;
+    padding: 20px;
+}
+
+.about {
+    background-color: rgb(236, 236, 236);
+    padding: 20px;
+    padding-top: 40px;
+}
+
+.about-heading {
+    font-weight: 800;
+    font-size: larger;
+    text-align: center;
+}
+
+.aboutfeaturesheading {
+    font-size: large;
+    margin: 10px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: coral;
+}
+
+.img {
+    height: 50%;
+}
+
+.img img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.cards {
+    margin-top: 40px;
+    background-image: linear-gradient(180deg, rgb(236, 236, 236), 50%, rgba(235, 217, 217, 0.959) 50%);
+    display: flex;
+    justify-content: space-around;
+}
+
+.card {
+    overflow: hidden;
+    border-radius: 20px;
+    height: 50vh;
+    width: 30%;
+    background-color: white;
+}
+
+.hamburger {
+    position: relative;
+    bottom: auto;
     display: none;
-  }
-    .list.active li{
-       display: block;
-       width: 100%;
+}
 
-    }
-    .hamburger{
-      display: block;
-      cursor: pointer;
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    margin: 5px auto;
+    background-color: whitesmoke;
+}
 
+.categoryofvehicle {
+    color: rgb(177, 177, 177);
+    font-size: large;
+}
+
+@media screen and (max-width: 800px) {
+    .button {
+        width: 80%;
     }
-   
+    .subscribe {
+        width: 100%;
+    }
+    .pricingcards {
+        display: flex;
+        flex-direction: column;
+    }
+    .pricingcard {
+        width: 100%;
+        margin-top: 20px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .list li {
+        display: none;
+    }
+    .list.active li {
+        display: block;
+        width: 100%;
+    }
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
     .hamburger.active .bar:nth-child(2) {
-      opacity: 0;
-  }
-
-  .hamburger.active .bar:nth-child(1) {
-      transform: translateY(8px) rotate(45deg);
-  }
-
-  .hamburger.active .bar:nth-child(3) {
-      transform: translateY(-8px) rotate(-45deg);
-  }
-  
-    
+        opacity: 0;
+    }
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
 }
+
 .list a {
-  color:white;
-  text-decoration: none;
-  font-size: large;
-  
+    color: white;
+    text-decoration: none;
+    font-size: large;
 }
-.list a:hover {
-  color:rgba(45, 118, 253, 0.466);
 
+.list a:hover {
+    color: rgba(45, 118, 253, 0.466);
 }
 
 @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
+    .topnav.responsive {
+        position: relative;
+    }
     .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
     }
     .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
+        float: none;
+        display: block;
+        text-align: left;
     }
-  }
+}
